<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deity Aphrodite</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose">Compose</string>
    <string name="action_search">Search</string>
    <string name="search_text">Learn stuff about space</string>
    <string name="text_button_1">International Space Station</string>
    <string name="text_button_2">Planets</string>
    <string name="text_button_3">Spacecrafts</string>
    <string name="text_button_start1">Learn</string>
    <string name="text_button_start2">Play</string>
    <string name="text_button_start3">Favs</string>
    <string name="first_sentence">Space is inside you too!!!</string>
    <string name="citation_text">\"The good thing about science is that it\'s true whether or not you believe in it\"</string>
    <string name="citation_author">Neil DeGrasse Tyson</string>
    <string name="option1">Learn about space</string>
    <string name="option2">Play with space</string>
    <string name="option3">Your space favorites</string>
    <string name="text_button_4">Space Agencies</string>
    <string name="Agencies">Space agencies</string>
    <string name="ESA">European Space Agency</string>
    <string name="ESAtext">The European Space Agency (ESA) is way cooler than NASA!</string>
    <string name="WelcomeText">Hello, spacey fella!!! \n I am Neil Armstrong </string>
    <string name="ISS">International Space Station</string>
    <string name="Planets">Planets</string>
</resources>
